<?xml version="1.0"?>
<package format="3">
  <name>grid_vision</name>
  <version>0.1.0</version>
  <description>Occupancy grid map using 2D object detections and point clouds</description>
  <maintainer email="rohankhaire.work@gmail.com">Rohan Khaire</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>libopencv-dev</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>grid_map</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

